# ACE

./: .gitignore  CMakeLists.txt  Makefile  Makefile_SLEPC  Makefile_UB  Makefile_individual  Makefile_static  README.md  compile.bat_  make_params.mk  pyproject.toml
.github/workflows/: release.yml  wheel_ubuntu.yml  wheel_windows.yml  wheels.yml
documentation/: Makefile  documentation.4ct  documentation.4tc  documentation.aux  documentation.css  documentation.dvi  documentation.html  documentation.idv  documentation.lg  documentation.tex  documentation.xref
documentation/documentation/: WARNINGS  documentation.css  images.aux  images.pl  images.tex  img100.old  img102.old  img103.old  img104.old  img106.old  img107.old  img108.old  img109.old  img111.old  img113.old  img114.old  img115.old  img118.old  img12.old  img120.old  img121.old  img123.old  img125.old  img131.old  img15.old  img17.old  img19.old  img20.old  img21.old  img22.old  img26.old  img29.old  img30.old  img31.old  img34.old  img38.old  img39.old  img40.old  img41.old  img43.old  (+45 more)
documentation/figs/: ACE1.out  driver1.param  example1.eps  example2.eps  plot_hopping_N10.eps  plot_hopping_N10.plt  plot_hopping_N2.eps  plot_hopping_N2.plt  plot_pulse.eps  plot_pulse.plt  plot_pulse_from_file.eps  plot_rabi.eps  plot_rabi.plt
examples/01_resonantlevelmodel/: 01_resonantlevelmodel_N2_degenerate.param  02_resonantlevelmodel_N4.param  03_resonantlevelmodel_N10.param  04_resonantlevelmodel_N100.param  README.txt
examples/02_phonons/: 00_none_Lindblad.param  01_iQUAPI.param  01_none_Lindblad.param  02_calculate_phonon_PT.param  02_iQUAPI.param  03_calculate_photon_PT.param  04_combine.param  04_combine_phonon_Lindblad.param  05_combine_phonon_Lindblad.param  05_combine_phonon_photon.param  06_calculate_photon_PT_BW0.4.param  07_combine_phonon_photon_BW0.4.param  08_combine_phonon_photon_BW0.4.param  08_initial_nophonon_photon.param  09_initial_nophonon_photon.param  09_initial_phonon_photon.param  10_initial_iQUAPI.param  11_initial_iQUAPI.param  README.txt
examples/03_spins/: 03_unpolarised_N100_thr1e-10.param  03_unpolarised_N100_thr1e-16.param  03_unpolarised_N10_thr1e-16.param
examples/04_morse/: 13_morse_T0.5_M5_Jscale0.1_L10_renorm.param  14_morse_T0.5_M5_Jscale0.1_L100_renorm.param
examples/04_superradiance/: 01_calculate_PT.param  02_delta0.param  03_delta1.param  04_delta10.param  README.txt
examples/05_superradiance/: 01_calculate_PT.param
examples/06_dispersive/: 02_instant_Fock.mparam1  02_instant_Fock.mparam4  03_dispersive_kappa0.mparam3  04_dispersive_kappa0.1.mparam3  04_dispersive_kappa0.1.mparam4  04_dispersive_kappa0.1.param  04_generate_dispersive_kappa0.1_mparam.sh
examples/results/: README.txt
examples/tree2024/: tree_dt0.01_te20_thr1e-9_BZ7_N64_M4_T4.param  tree_dt0.01_te20_thr1e-9_BZ7_N64_M4_T4_i1.param  tree_dt0.01_te20_thr1e-9_BZ7_N64_M4_T4_i1_tr100.param  tree_dt0.01_te20_thr1e-9_BZ7_N64_M4_T4_tr100.param  tree_dt0.1_te20_thr1e-7_BZ7_N64_M4_T4.param  tree_dt0.1_te20_thr1e-7_BZ7_N64_M4_T4_i1.param  tree_dt0.1_te20_thr1e-7_BZ7_N64_M4_T4_i1_tr100.param  tree_dt0.1_te20_thr1e-7_BZ7_N64_M4_T4_tr100.param
include/: ACE.h  ACE.hpp  ACE_fwd.hpp  ADM.h  ADM.hpp  ADM_MPS.h  ADM_MPS.hpp  Abstract_EigenMPS.h  AddPT.hpp  AnalyzePT.h  AnalyzePT.hpp  ApproxSVD.hpp  BCF_Decomposition.hpp  BCF_Decomposition_DrudeLorentz.hpp  BCF_Decomposition_MeierTannor.hpp  BinaryReader.hpp  BlockCombine.hpp  BlockCombine_Basics.hpp  BufferedContainer.hpp  BufferedElement.hpp  Cavityfy.h  CheckMatrix.h  CheckMatrix.hpp  Closure_Ops.hpp  CombineFreeAndModePropagator.h  CombinePropagatorSym.h  ComplexFunction_Interpolate.h  ComplexFunction_Interpolate.hpp  Compress_Trafo_At.h  Compress_Trafo_At.hpp  CompressedPropagator.hpp  CompressionTree.hpp  Constants.h  Constants.hpp  Coupling_Groups.h  Coupling_Groups.hpp  DiagBB.h  DiagBB.hpp  DiagBB_K_integrands.h  DiagBB_K_integrands.hpp  (+265 more)
pybind/: 01_rabi.py  02_rabi.py  03_pulse.py  04_pulse_ohmic.py  05_Mollow_spectra.py  06_cQED.py  07_QUAPI.py  08_random_spins.py  ACEutils.py  MANIFEST.in  example.py  pybind.cpp  pybind_nb.cpp  setup.py
pybind/ACE/: __init__.py  utils.py
pybind/examples/: 01_rabi.py  02_rabi.py  03_pulse.py  04_pulse_ohmic.py  05_Mollow_spectra.py  06_cQED.py  07_two_emitters.py  08_QUAPI.py  09_random_spins.py
src/: ACE.cpp  ACE_integrate_t1.cpp  ADM.cpp  ADM_MPS.cpp  AddPT.cpp  AnalyzePT.cpp  ApproxSVD.cpp  BCF_Decomposition.cpp  BCF_Decomposition_DrudeLorentz.cpp  BCF_Decomposition_MeierTannor.cpp  BinaryReader.cpp  BlockCombine.cpp  BlockCombine_Basics.cpp  BufferedContainer.cpp  BufferedElement.cpp  CheckMatrix.cpp  Closure_Ops.cpp  ComplexFunction_Interpolate.cpp  Compress_Trafo_At.cpp  CompressedPropagator.cpp  CompressionTree.cpp  Constants.cpp  Coupling_Groups.cpp  DiagBB.cpp  DummyException.cpp  DynamicalMap.cpp  EDM_Filter.cpp  EDM_Index.cpp  EDM_Initial_State.cpp  EDM_OneBodyTerm_FreePropagator.cpp  EDM_OutputPrinter.cpp  EDM_Simulation.cpp  EDM_State.cpp  EDM_TwoBodyTerm_FreePropagator.cpp  EDM_TwoBodyTerm_PT.cpp  EffectivePropagator.cpp_  EnergyRange.cpp  Env_State_Filter.cpp  EnvironmentOperators.cpp  Equilibrium.cpp  (+127 more)
src/tools/: DiagBB_print_K.cpp  Makefile  PT_analyze.cpp  PT_apply_system_propagator.cpp  PT_coarse_grain.cpp  PT_extend.cpp  generate_J.cpp
src_exec/: ACE.cpp  Makefile  QUAPI.cpp  TEMPO.cpp
src_exec/experimental/: Chebyshev_Expand.cpp  DiagBB_print_K.cpp  DynamicalMap.cpp  EDM_test1.cpp  PT_infinite.cpp  PT_traceout.cpp  SLEPC_PT_infinite.cpp  SLEPC_PT_infinite.cpp_bck  SLEPC_PT_infinite.cpp_bck2  SLEPC_PT_infinite.cpp_bck3  TC_PT.cpp  TC_TinvTcombine.cpp  TC_join.cpp  TC_overlap.cpp  block_combine.cpp  estimate_memory.cpp  extract_effective_propagator.cpp  extract_singular_values.cpp  fit_K_single_mode.cpp  fit_K_single_mode_pure.cpp  generate_J.cpp  generate_noise.cpp  richardson_extrapolate.cpp  single_mode_K.cpp  test_CompressionTree.cpp  test_DrudeLorentz.cpp  test_FFT.cpp  test_GaussNewton.cpp  test_HermitianLiouvilleBasis.cpp  test_Largest_EV.cpp  test_Largest_EV.cpp_bck  test_Largest_EV2.cpp  (+5 more)
(+1299 files in other folders)
